# agent_culltique

./: .env  client.py  mathserver.py  order_status.py  pyproject.toml  requirements.txt  weather.py
ecommerce_apis/: main.py  models.py
notebook/: agent_1.ipynb  agent_1_test.ipynb  agent_2.ipynb  agent_2_test.ipynb  agent_3_test.ipynb  agent_4_test.ipynb  agent_AI_1_test.ipynb  agent_AI_2.py  agent_AI_2_test.ipynb  agent_AI_3.py  twitter_automated.py  txt.txt
